[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pomodoro-penguin"
version = "1.0.1"
description = "A simple terminal-based Pomodoro timer system"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name="Michael Miao"},
    {name="Simon Ni"},
    {name="Aryaman Nagpal"},
    {name="Lan Nguyen"},
    {name="Name"}
]
keywords = ["pomodoro", "timer", "productivity", "TUI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "emoji"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "*/__main__.py"
]

[project.urls]
Homepage = "https://github.com/swe-students-spring2026/3-package-emperor_penguins"
Documentation = "https://github.com/swe-students-spring2026/3-package-emperor_penguins#readme"